# ERP-System

./: .env.example  README.md  codex-session-log.md  pyproject.toml  requirements.txt
backend/: main.py
backend/app/: guardrails.py  llm.py  main.py  query_engine.py
backend/app/api/: router.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: graph.py  health.py  query.py
backend/app/core/: config.py  database.py
backend/app/db/: base.py  models.py
backend/app/schemas/: graph.py  query.py
backend/app/services/: graph_store.py  query_service.py
backend/app/services/ai/: client.py  guardrails.py
data/: graph_overview.json  sample_graph.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  QueryGraph.jsx  api.js
scripts/: build_graph_from_sap.py
