[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erp-system-backend"
version = "0.1.0"
description = "Graph-based ERP workflow debugging and query system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "openai>=1.58,<2",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "psycopg2-binary>=2.9,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
